Refactored/Reformatted across all classes