@@ -1,169 +1,101 @@
 package controllers;
 
-import application.Main;
-import io.github.palexdev.materialfx.controls.MFXTextField;
 import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
-import javafx.fxml.FXMLLoader;
 import javafx.geometry.Orientation;
 import javafx.scene.Node;
 import javafx.scene.control.*;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.input.Clipboard;
 import javafx.scene.input.ClipboardContent;
-import javafx.scene.layout.*;
 import models.*;
-import org.controlsfx.control.PopOver;
+import services.*;
 import utils.GUIUtils;
 import utils.RosterUtils;
 import utils.TableUtils;
-
-import javax.swing.*;
-import java.io.IOException;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.text.NumberFormat;
 import java.time.LocalDate;
 import java.time.YearMonth;
-import java.time.format.TextStyle;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 public class MonthlySummaryController extends DateSelectController{
 
-	@FXML
-	private StackPane monthSelector;
-	@FXML
-	private MFXTextField monthSelectorField;
-    @FXML
-	private TableView<MonthlySummaryDataPoint> summaryTable;
-	@FXML
-	private TableColumn<?, ?> customersCol;
-	@FXML
-	private TableColumn<?, ?> dateCol;
-	@FXML
-	private TableColumn<?, ?> dollarPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> durationCol;
-	@FXML
-	private TableColumn<?, ?> gpDollarCol;
-	@FXML
-	private TableColumn<?, ?> gpPercentCol;
-	@FXML
-	private TableColumn<?, ?> itemsCol;
-	@FXML
-	private TableColumn<?, ?> itemsPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> otcDollarPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> otcItemsCol;
-	@FXML
-	private TableColumn<?, ?> otcPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> rentAndOutgoingsCol;
-	@FXML
-	private TableColumn<?, ?> runningZProfitCol;
-	@FXML
-	private TableColumn<?, ?> scriptsCol;
-	@FXML
-	private TableColumn<?, ?> tillBalanceCol;
-	@FXML
-	private TableColumn<?, ?> totalIncomeCol;
-	@FXML
-	private TableColumn<?, ?> wagesCol;
-	@FXML
-	private TableColumn<?, ?> zReportProfitCol;
-	@FXML
-	private TableColumn<MonthlySummaryDataPoint,String> runningTillBalanceCol;
-
-	@FXML
-	private TableView<MonthlySummaryDataPoint> totalsTable;
-	@FXML
-	private TableColumn<?, ?> totalsDateCol;
-	@FXML
-	private TableColumn<?, ?> totalsCustomersCol;
-	@FXML
-	private TableColumn<?, ?> totalsDollarPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> totalsDurationCol;
-	@FXML
-	private TableColumn<?, ?> totalsGpDollarCol;
-	@FXML
-	private TableColumn<?, ?> totalsGpPercentCol;
-	@FXML
-	private TableColumn<?, ?> totalsItemsCol;
-	@FXML
-	private TableColumn<?, ?> totalsItemsPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> totalsOtcDollarPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> totalsOtcItemsCol;
-	@FXML
-	private TableColumn<?, ?> totalsOtcPerCustomerCol;
-	@FXML
-	private TableColumn<?, ?> totalsRentAndOutgoingsCol;
-	@FXML
-	private TableColumn<?, ?> totalsRunningZProfitCol;
-	@FXML
-	private TableColumn<?, ?> totalsScriptsCol;
-	@FXML
-	private TableColumn<?, ?> totalsTillBalanceCol;
-	@FXML
-	private TableColumn<?, ?> totalsTotalIncomeCol;
-	@FXML
-	private TableColumn<?, ?> totalsWagesCol;
-	@FXML
-	private TableColumn<?, ?> totalsZReportProfitCol;
-	@FXML
-	private TableColumn<MonthlySummaryDataPoint,String> totalsRunningTillBalanceCol;
-	@FXML
-	private Button exportDataButton;
-
-
-
-	private PopOver currentDatePopover;
-
-    private Connection con = null;
-    PreparedStatement preparedStatement = null;
-    ResultSet resultSet = null;
-    private Main main;
-
+    @FXML private TableView<MonthlySummaryDataPoint> summaryTable;
+	@FXML private TableColumn<?, ?> customersCol;
+	@FXML private TableColumn<?, ?> dateCol;
+	@FXML private TableColumn<?, ?> dollarPerCustomerCol;
+	@FXML private TableColumn<?, ?> durationCol;
+	@FXML private TableColumn<?, ?> gpDollarCol;
+	@FXML private TableColumn<?, ?> gpPercentCol;
+	@FXML private TableColumn<?, ?> itemsCol;
+	@FXML private TableColumn<?, ?> itemsPerCustomerCol;
+	@FXML private TableColumn<?, ?> otcDollarPerCustomerCol;
+	@FXML private TableColumn<?, ?> otcItemsCol;
+	@FXML private TableColumn<?, ?> otcPerCustomerCol;
+	@FXML private TableColumn<?, ?> rentAndOutgoingsCol;
+	@FXML private TableColumn<?, ?> runningZProfitCol;
+	@FXML private TableColumn<?, ?> scriptsCol;
+	@FXML private TableColumn<?, ?> tillBalanceCol;
+	@FXML private TableColumn<?, ?> totalIncomeCol;
+	@FXML private TableColumn<?, ?> wagesCol;
+	@FXML private TableColumn<?, ?> zReportProfitCol;
+	@FXML private TableColumn<MonthlySummaryDataPoint,String> runningTillBalanceCol;
+	@FXML private TableView<MonthlySummaryDataPoint> totalsTable;
+	@FXML private TableColumn<?, ?> totalsDateCol;
+	@FXML private TableColumn<?, ?> totalsCustomersCol;
+	@FXML private TableColumn<?, ?> totalsDollarPerCustomerCol;
+	@FXML private TableColumn<?, ?> totalsDurationCol;
+	@FXML private TableColumn<?, ?> totalsGpDollarCol;
+	@FXML private TableColumn<?, ?> totalsGpPercentCol;
+	@FXML private TableColumn<?, ?> totalsItemsCol;
+	@FXML private TableColumn<?, ?> totalsItemsPerCustomerCol;
+	@FXML private TableColumn<?, ?> totalsOtcDollarPerCustomerCol;
+	@FXML private TableColumn<?, ?> totalsOtcItemsCol;
+	@FXML private TableColumn<?, ?> totalsOtcPerCustomerCol;
+	@FXML private TableColumn<?, ?> totalsRentAndOutgoingsCol;
+	@FXML private TableColumn<?, ?> totalsRunningZProfitCol;
+	@FXML private TableColumn<?, ?> totalsScriptsCol;
+	@FXML private TableColumn<?, ?> totalsTillBalanceCol;
+	@FXML private TableColumn<?, ?> totalsTotalIncomeCol;
+	@FXML private TableColumn<?, ?> totalsWagesCol;
+	@FXML private TableColumn<?, ?> totalsZReportProfitCol;
+	@FXML private TableColumn<MonthlySummaryDataPoint,String> totalsRunningTillBalanceCol;
+	@FXML private Button exportDataButton;
     private final ObservableList<TillReportDataPoint> currentTillReportDataPoints = FXCollections.observableArrayList();
 	private final ObservableList<EODDataPoint> currentEODDataPoints = FXCollections.observableArrayList();
 	private YearMonth yearMonthObject;
 	private int daysInMonth;
-	RosterUtils rosterUtils = null;
+	RosterUtils rosterUtils;
+	EODService eodService;
+	TillReportService tillReportService;
+	BudgetExpensesService budgetExpensesService;
+	BASCheckerService basCheckerService;
+	AccountPaymentService accountPaymentService;
+	InvoiceService invoiceService;
+	AccountPaymentContactService accountPaymentContactService;
 
-	
-	 @FXML
-	private void initialize() {}
-
-	@Override
-	public void setMain(Main main) {
-		this.main = main;
-	}
-	
-	public void setConnection(Connection c) {
-		this.con = c;
-	}
+	@FXML
+	private void initialize() {
+		eodService = new EODService();
+		tillReportService = new TillReportService();
+		budgetExpensesService = new BudgetExpensesService();
+		basCheckerService = new BASCheckerService();
+		accountPaymentService = new AccountPaymentService();
+		invoiceService = new InvoiceService();
+		accountPaymentContactService = new AccountPaymentContactService();
+	 }
 
 	@Override
 	public void fill() {
-		if(main.getCurrentUser().getPermissions().stream().anyMatch(permission -> permission.getPermissionName().equals("Monthly Summary - Export"))) {
-			exportDataButton.setVisible(true);
-		}else{
-			exportDataButton.setVisible(false);
-		}
+        exportDataButton.setVisible(main.getCurrentUser().getPermissions().stream().anyMatch(permission -> permission.getPermissionName().equals("Monthly Summary - Export")));
 //		itemsPerCustomerCol.getStyleClass().add("yellowColumn");
 		summaryTable.setSelectionModel(null);
 		dateCol.setCellValueFactory(new PropertyValueFactory<>("dateString"));
 		//Add center alignment to date column
-		
 		durationCol.setCellValueFactory(new PropertyValueFactory<>("dayDuration"));
 		customersCol.setCellValueFactory(new PropertyValueFactory<>("noOfCustomersString"));
 		itemsCol.setCellValueFactory(new PropertyValueFactory<>("noOfItemsString"));
@@ -182,10 +114,7 @@ public class MonthlySummaryController extends DateSelectController{
 		zReportProfitCol.setCellValueFactory(new PropertyValueFactory<>("zReportProfitString"));
 		tillBalanceCol.setCellValueFactory(new PropertyValueFactory<>("tillBalanceString"));
 		runningTillBalanceCol.setCellValueFactory(new PropertyValueFactory<>("runningTillBalanceString"));
-
-		summaryTable.setColumnResizePolicy(TableView.UNCONSTRAINED_RESIZE_POLICY);
-		summaryTable.setFixedCellSize(25.0);
-		VBox.setVgrow(summaryTable, Priority.ALWAYS);
+		TableUtils.resizeTableColumns(summaryTable,runningTillBalanceCol);
 		for(TableColumn<?, ?> tc: summaryTable.getColumns()){
 			if(tc.getGraphic()!=null){
 				Label l = (Label) tc.getGraphic();
@@ -194,9 +123,7 @@ public class MonthlySummaryController extends DateSelectController{
 			}else{
 				tc.setPrefWidth(TableUtils.getColumnWidth(tc)+50);
 			}
-
 		}
-
 		totalsDateCol.setCellValueFactory(new PropertyValueFactory<>("dateValue"));
 		totalsDurationCol.setCellValueFactory(new PropertyValueFactory<>("dateDurationValue"));
 		totalsCustomersCol.setCellValueFactory(new PropertyValueFactory<>("noOfCustomersValue"));
@@ -216,7 +143,6 @@ public class MonthlySummaryController extends DateSelectController{
 		totalsZReportProfitCol.setCellValueFactory(new PropertyValueFactory<>("zReportProfitValue"));
 		totalsTillBalanceCol.setCellValueFactory(new PropertyValueFactory<>("tillBalanceValue"));
 		totalsRunningTillBalanceCol.setCellValueFactory(new PropertyValueFactory<>("runningTillBalanceValue"));
-
 		totalsDateCol.prefWidthProperty().bind(dateCol.widthProperty());
 		totalsDurationCol.prefWidthProperty().bind(durationCol.widthProperty());
 		totalsCustomersCol.prefWidthProperty().bind(customersCol.widthProperty());
@@ -238,24 +164,18 @@ public class MonthlySummaryController extends DateSelectController{
 		totalsRunningTillBalanceCol.prefWidthProperty().bind(runningTillBalanceCol.widthProperty());
 		totalsTable.setFixedCellSize(25.0);
 		totalsTable.setColumnResizePolicy(TableView.UNCONSTRAINED_RESIZE_POLICY);
-
 		Platform.runLater(() -> {
 			ScrollBar mainTableScrollBar = getHorizontalScrollbar(summaryTable);
 			ScrollBar summaryTableScrollBar = getHorizontalScrollbar(totalsTable);
-
 			if (mainTableScrollBar != null && summaryTableScrollBar != null) {
 				mainTableScrollBar.valueProperty().bindBidirectional(summaryTableScrollBar.valueProperty());
 			}
 		});
-
-//		Platform.runLater(() -> GUIUtils.customResize(summaryTable,runningTillBalanceCol,(Label) runningTillBalanceCol.getGraphic()));
 		setDate(main.getCurrentDate());
-
 	}
 
 	private ScrollBar getHorizontalScrollbar(TableView<?> table) {
 		ScrollBar result = null;
-
 		for (Node node : table.lookupAll(".scroll-bar")) {
 			if (node instanceof ScrollBar bar) {
                 if (bar.getOrientation().equals(Orientation.HORIZONTAL)) {
@@ -263,77 +183,40 @@ public class MonthlySummaryController extends DateSelectController{
 				}
 			}
 		}
-
 		return result;
-	}
-
-	public void monthForward() {setDate(main.getCurrentDate().plusMonths(1));
-	}
-
-	public void monthBackward() {
-		setDate(main.getCurrentDate().minusMonths(1));
 	}
 
 	public void fillTable(){
         ObservableList<MonthlySummaryDataPoint> monthlySummaryPoints = FXCollections.observableArrayList();
 		yearMonthObject = YearMonth.of(main.getCurrentDate().getYear(), main.getCurrentDate().getMonth());
 		daysInMonth = yearMonthObject.lengthOfMonth();
+		LocalDate startDate = LocalDate.of(yearMonthObject.getYear(), yearMonthObject.getMonth(), 1);
+		LocalDate endDate = LocalDate.of(yearMonthObject.getYear(), yearMonthObject.getMonth(), daysInMonth);
 		try{
 			rosterUtils = new RosterUtils(main,yearMonthObject);
 		}catch (SQLException e){
-			e.printStackTrace();
+			dialogPane.showError("Error","Error loading roster data",e);
 		}
-
 		double monthlyRent = 0;
 		double dailyOutgoings = 0;
 		double monthlyWages = 0;
-		String sql;
 		try {
-			sql = "SELECT * FROM tillReportDatapoints where storeID = ? AND MONTH(assignedDate) = ? AND YEAR(assignedDate) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, yearMonthObject.getMonthValue());
-			preparedStatement.setInt(3, yearMonthObject.getYear());
-			resultSet = preparedStatement.executeQuery();
-			while (resultSet.next()) {
-				currentTillReportDataPoints.add(new TillReportDataPoint(resultSet));
+			currentTillReportDataPoints.setAll(tillReportService.getTillReportDataPoints(main.getCurrentStore().getStoreID(), startDate, endDate));
+			currentEODDataPoints.setAll(eodService.getEODDataPoints(main.getCurrentStore().getStoreID(), startDate, endDate));
+			BudgetAndExpensesDataPoint currentBudgetAndExpensesDataPoint = budgetExpensesService.getBudgetExpensesData(main.getCurrentStore().getStoreID(), yearMonthObject);
+			if(currentBudgetAndExpensesDataPoint!=null){
+				monthlyRent = currentBudgetAndExpensesDataPoint.getMonthlyRent();
+				dailyOutgoings = currentBudgetAndExpensesDataPoint.getDailyOutgoings();
+				monthlyWages = currentBudgetAndExpensesDataPoint.getMonthlyWages();
 			}
-
-			sql = "SELECT * FROM eodDataPoints where storeID = ? AND MONTH(date) = ? AND YEAR(date) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, yearMonthObject.getMonthValue());
-			preparedStatement.setInt(3, yearMonthObject.getYear());
-			resultSet = preparedStatement.executeQuery();
-			while (resultSet.next()) {
-				currentEODDataPoints.add(new EODDataPoint(resultSet));
-			}
-			sql = "SELECT * FROM budgetandexpenses WHERE storeID = ? AND MONTH(date) = ? AND YEAR(date) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, main.getCurrentDate().getMonthValue());
-			preparedStatement.setInt(3, main.getCurrentDate().getYear());
-			resultSet = preparedStatement.executeQuery();
-			if (resultSet == null || !resultSet.next()) {
-				monthlyRent = 0;
-				dailyOutgoings = 0;
-				monthlyWages = 0;
-			}else{
-				monthlyRent = resultSet.getDouble("monthlyRent");
-				dailyOutgoings = resultSet.getDouble("dailyOutgoings");
-				monthlyWages = resultSet.getDouble("monthlyWages");
-			}
-		} catch (SQLException throwables) {
-			throwables.printStackTrace();
+		} catch (SQLException ex) {
+			dialogPane.showError("Error","Error loading data",ex);
 		}
-
-
 		double totalOpenDuration = rosterUtils.getOpenDuration();
 		for(int i = 1; i<daysInMonth+1; i++){
 			LocalDate d = LocalDate.of(yearMonthObject.getYear(), yearMonthObject.getMonth(),i);
 			monthlySummaryPoints.add(new MonthlySummaryDataPoint(d,currentTillReportDataPoints,currentEODDataPoints, monthlySummaryPoints,rosterUtils,monthlyRent,dailyOutgoings,totalOpenDuration,monthlyWages));
 		}
-
 		summaryTable.setItems(monthlySummaryPoints);
 		totalsTable.getItems().clear();
 		totalsTable.getItems().add(new MonthlySummaryDataPoint(monthlySummaryPoints, true, rosterUtils.getOpenDays()));
@@ -341,62 +224,16 @@ public class MonthlySummaryController extends DateSelectController{
 		Platform.runLater(() -> GUIUtils.customResize(summaryTable,runningTillBalanceCol,(Label) runningTillBalanceCol.getGraphic()));
 	}
 
-	public void openMonthSelector(){
-		if(currentDatePopover!=null&&currentDatePopover.isShowing()){
-			currentDatePopover.hide();
-		}else {
-			PopOver monthSelectorMenu = new PopOver();
-			FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/FXML/MonthYearSelectorContent.fxml"));
-			VBox monthSelectorMenuContent = null;
-			try {
-				monthSelectorMenuContent = loader.load();
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-			MonthYearSelectorContentController rdc = loader.getController();
-			rdc.setMain(main);
-			rdc.setParent(this);
-			rdc.fill();
-
-			monthSelectorMenu.setOpacity(1);
-			monthSelectorMenu.setContentNode(monthSelectorMenuContent);
-			monthSelectorMenu.setArrowSize(0);
-			monthSelectorMenu.setAnimated(true);
-			monthSelectorMenu.setArrowLocation(PopOver.ArrowLocation.TOP_CENTER);
-			monthSelectorMenu.setAutoHide(true);
-			monthSelectorMenu.setDetachable(false);
-			monthSelectorMenu.setHideOnEscape(true);
-			monthSelectorMenu.setCornerRadius(10);
-			monthSelectorMenu.setArrowIndent(0);
-			monthSelectorMenu.show(monthSelector);
-			currentDatePopover=monthSelectorMenu;
-			monthSelectorField.requestFocus();
-		}
-	}
-
 	public void setDate(LocalDate date) {
 		main.setCurrentDate(date);
-		String fieldText = main.getCurrentDate().getMonth().getDisplayName(TextStyle.FULL, Locale.ENGLISH);
-		fieldText += ", ";
-		fieldText += main.getCurrentDate().getYear();
-		monthSelectorField.setText(fieldText);
+		updateMonthSelectorField();
 		fillTable();
 	}
 
 	public void exportData(){
-		String sql;
-		BASCheckerDataPoint currentBASCheckerDataPoint = null;
+        BASCheckerDataPoint currentBASCheckerDataPoint;
 		try{
-			sql = "SELECT * FROM baschecker WHERE storeID = ? AND MONTH(date) = ? AND YEAR(date) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, main.getCurrentDate().getMonthValue());
-			preparedStatement.setInt(3, main.getCurrentDate().getYear());
-			resultSet = preparedStatement.executeQuery();
-			if (resultSet == null || !resultSet.next()) {
-            }else{
-				currentBASCheckerDataPoint = new BASCheckerDataPoint(resultSet);
-			}
+			currentBASCheckerDataPoint = basCheckerService.getBASData(main.getCurrentStore().getStoreID(), yearMonthObject);
 			double medicareTotal = 0;
 			for(int i=1;i<daysInMonth+1;i++) {
 				LocalDate d = LocalDate.of(yearMonthObject.getYear(), yearMonthObject.getMonth(), i);
@@ -411,40 +248,20 @@ public class MonthlySummaryController extends DateSelectController{
 					}
 				}
 			}
-			double cpaIncome;
-			double lanternPayIncome;
-			double otherIncome;
-			double basRefund;
-			double monthlyLoan;
-			sql = "SELECT * FROM budgetandexpenses WHERE storeID = ? AND MONTH(date) = ? AND YEAR(date) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, main.getCurrentDate().getMonthValue());
-			preparedStatement.setInt(3, main.getCurrentDate().getYear());
-			resultSet = preparedStatement.executeQuery();
-			if (resultSet == null || !resultSet.next()) {
-				cpaIncome = 0;
-				lanternPayIncome = 0;
-				otherIncome = 0;
-				basRefund = 0;
-				monthlyLoan = 0;
-			}else{
-				cpaIncome = resultSet.getDouble("6CPAIncome");
-				lanternPayIncome = resultSet.getDouble("LanternPayIncome");
-				otherIncome = resultSet.getDouble("OtherIncome");
-				basRefund = resultSet.getDouble("ATO_GST_BAS_refund");
-				monthlyLoan = resultSet.getDouble("monthlyLoan");
+			double cpaIncome=0;
+			double lanternPayIncome=0;
+			double otherIncome=0;
+			double basRefund=0;
+			double monthlyLoan=0;
+			BudgetAndExpensesDataPoint currentBudgetAndExpensesDataPoint = budgetExpensesService.getBudgetExpensesData(main.getCurrentStore().getStoreID(), yearMonthObject);
+			if(currentBudgetAndExpensesDataPoint!=null) {
+				cpaIncome = currentBudgetAndExpensesDataPoint.getCpaIncome();
+				lanternPayIncome = currentBudgetAndExpensesDataPoint.getLanternIncome();
+				otherIncome = currentBudgetAndExpensesDataPoint.getOtherIncome();
+				basRefund = currentBudgetAndExpensesDataPoint.getAtoGSTrefund();
+				monthlyLoan = currentBudgetAndExpensesDataPoint.getMonthlyLoan();
 			}
-			ObservableList<AccountPayment> currentAccountPaymentDataPoints = FXCollections.observableArrayList();
-			sql = "SELECT * FROM accountPayments JOIN accountPaymentContacts a on a.idaccountPaymentContacts = accountPayments.contactID WHERE accountPayments.storeID = ? AND MONTH(invoiceDate) = ? AND YEAR(invoiceDate) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, yearMonthObject.getMonthValue());
-			preparedStatement.setInt(3, yearMonthObject.getYear());
-			resultSet = preparedStatement.executeQuery();
-			while (resultSet.next()) {
-				currentAccountPaymentDataPoints.add(new AccountPayment(resultSet));
-			}
+			ObservableList<AccountPayment> currentAccountPaymentDataPoints = FXCollections.observableArrayList(accountPaymentService.getAccountPaymentsForMonth(main.getCurrentStore().getStoreID(), yearMonthObject));
 			ObservableList<AccountPaymentContactDataPoint> currentContactTotals = FXCollections.observableArrayList();
 			boolean contactFound;
 			for(AccountPayment a:currentAccountPaymentDataPoints){
@@ -456,33 +273,22 @@ public class MonthlySummaryController extends DateSelectController{
 					}
 				}
 				if(!contactFound){
-					AccountPaymentContactDataPoint acdp = getContactfromName(a.getContactName());
+					AccountPaymentContactDataPoint acdp = accountPaymentContactService.getContactByName(a.getContactName(), main.getCurrentStore().getStoreID());
 					acdp.setTotalValue(a.getUnitAmount());
 					currentContactTotals.add(acdp);
 				}
 			}
-			ObservableList<Invoice> currentInvoices = FXCollections.observableArrayList();
-			sql = "SELECT * FROM invoices JOIN invoicesuppliers a on a.idinvoiceSuppliers = invoices.supplierID JOIN invoicedatapoints i on invoices.invoiceNo = i.invoiceNo WHERE invoices.storeID = ? AND MONTH(invoiceDate) = ? AND YEAR(invoiceDate) = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setInt(1, main.getCurrentStore().getStoreID());
-			preparedStatement.setInt(2, yearMonthObject.getMonthValue());
-			preparedStatement.setInt(3, yearMonthObject.getYear());
-			resultSet = preparedStatement.executeQuery();
-			while (resultSet.next()) {
-				currentInvoices.add(new Invoice(resultSet));
-			}
+			ObservableList<Invoice> currentInvoices = FXCollections.observableArrayList(invoiceService.getAllInvoices(main.getCurrentStore().getStoreID(), yearMonthObject));
 			double totalCOGS = 0;
 			for(Invoice i:currentInvoices){
 				totalCOGS+=i.getUnitAmount();
 			}
-
-
 			StringBuilder outString = new StringBuilder();
 //			outString.append("KPI\tTotal Turnover\tAverage Turnover\tTotal GP ($)\tAverage GP ($)\tAverage GP (%)\tActual T/over (incl other income)\tActual Average T/over (incl other income)\tActual GP ($) (incl other income)\tActual Average GP (incl other income)\tActual GP (%) (incl other income)\tTotal Customer #\tAverage Customer #\tTotal Script #\tAverage Script #\t$ / customer\tItems / customer\tOTC $ / Customer\tOTC items / Customer\tStock hold @ end of month\t# scripts on file\t# sms patients\tTotal Expenses\tAverage Expenses\t% wages\t% outgoings\t6CPA Income\tLatern Pay Income\tPharmaPrograms\tOther Income\tBAS - GST refund\tTotal Profit (Excl Loan+ GST refund)\tTotal Profit (Incl Loan + GST refund)\tCOGS from invoices (Match Xero)\tGP (banked income - Invoiced COGs + Stock not sold)\tProfit (as per Xero)\r\n");
 			//Empty first cell
 			outString.append("\t");
 			//Total Turnover
-			double totalIncome = Double.parseDouble(totalsTable.getItems().get(0).getTotalIncomeValue().replace("$", "").replace(",", ""));
+			double totalIncome = Double.parseDouble(totalsTable.getItems().getFirst().getTotalIncomeValue().replace("$", "").replace(",", ""));
 			double medicareBAS = 0;
 			if(currentBASCheckerDataPoint!=null){
 				medicareBAS = currentBASCheckerDataPoint.getBasDailyScript();
@@ -493,7 +299,7 @@ public class MonthlySummaryController extends DateSelectController{
 			//Average Turnover
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format((totalIncome+medicareIncome)/rosterUtils.getOpenDays())).append("\t");
 			//Total GP ($)
-			double totalGP = Double.parseDouble(totalsTable.getItems().get(0).getGpDollarsValue().replace("$", "").replace(",", ""));
+			double totalGP = Double.parseDouble(totalsTable.getItems().getFirst().getGpDollarsValue().replace("$", "").replace(",", ""));
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(totalGP+medicareIncome)).append("\t");
 			//Average GP ($)
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format((totalGP+medicareIncome)/rosterUtils.getOpenDays())).append("\t");
@@ -505,7 +311,7 @@ public class MonthlySummaryController extends DateSelectController{
 					.toList();
 			double pharmaProgramsIncome = 0.0;
 			if (!filteredList.isEmpty()) {
-				pharmaProgramsIncome = filteredList.get(0).getTotalValue();
+				pharmaProgramsIncome = filteredList.getFirst().getTotalValue();
 			}
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(totalIncome+medicareIncome+cpaIncome+lanternPayIncome+pharmaProgramsIncome+otherIncome)).append("\t");
 			//Actual Average T/over (incl other income)
@@ -515,7 +321,7 @@ public class MonthlySummaryController extends DateSelectController{
 			//Actual Average GP (incl other income)
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(((totalGP+medicareIncome)+cpaIncome+lanternPayIncome+pharmaProgramsIncome+otherIncome)/rosterUtils.getOpenDays())).append("\t");
 			//Actual GP (%) (incl other income)
-			outString.append(String.format("%.2f", 100*((totalGP+medicareIncome)+cpaIncome+lanternPayIncome+pharmaProgramsIncome+otherIncome)/(totalIncome+medicareIncome+cpaIncome+lanternPayIncome+pharmaProgramsIncome+otherIncome)) + "%").append("\t");
+			outString.append(String.format("%.2f", 100 * ((totalGP + medicareIncome) + cpaIncome + lanternPayIncome + pharmaProgramsIncome + otherIncome) / (totalIncome + medicareIncome + cpaIncome + lanternPayIncome + pharmaProgramsIncome + otherIncome))).append("%").append("\t");
 			//Total Customer #
 			outString.append(totalsTable.getItems().get(0).getNoOfCustomersValue()).append("\t");
 			//Average Customer #
@@ -533,7 +339,7 @@ public class MonthlySummaryController extends DateSelectController{
 			//OTC items/Customer
 			outString.append(totalsTable.getItems().get(1).getOtcPerCustomerValue()).append("\t");
 			//Stock on hand @ end of month
-			double initialStockOnHand = currentEODDataPoints.get(0).getStockOnHandAmount();
+			double initialStockOnHand = currentEODDataPoints.getFirst().getStockOnHandAmount();
 			double endStockOnHand = 0;
 			double scriptsOnFile = 0;
 			double smsPatients = 0;
@@ -554,17 +360,17 @@ public class MonthlySummaryController extends DateSelectController{
 			//SMS patients
 			outString.append(smsPatients).append("\t");
 			//Total Expenses
-			double totalExpenses = Double.parseDouble(totalsTable.getItems().get(0).getRentAndOutgoingsValue().replace("$", "").replace(",", ""))+Double.parseDouble(totalsTable.getItems().get(0).getWagesValue().replace("$", "").replace(",", ""));
+			double totalExpenses = Double.parseDouble(totalsTable.getItems().getFirst().getRentAndOutgoingsValue().replace("$", "").replace(",", ""))+Double.parseDouble(totalsTable.getItems().getFirst().getWagesValue().replace("$", "").replace(",", ""));
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(totalExpenses)).append("\t");
 			//Average Expenses
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(totalExpenses/rosterUtils.getOpenDays())).append("\t");
 			//% wages
-			outString.append(String.format("%.2f", 100*Double.parseDouble(totalsTable.getItems().get(0).getWagesValue().replace("$", "").replace(",", ""))/totalIncome)+"%").append("\t");
+			outString.append(String.format("%.2f", 100 * Double.parseDouble(totalsTable.getItems().getFirst().getWagesValue().replace("$", "").replace(",", "")) / totalIncome)).append("%").append("\t");
 			//% outgoings
-			outString.append(String.format("%.2f", 100*Double.parseDouble(totalsTable.getItems().get(0).getRentAndOutgoingsValue().replace("$", "").replace(",", ""))/totalIncome)+"%").append("\t");
+			outString.append(String.format("%.2f", 100 * Double.parseDouble(totalsTable.getItems().getFirst().getRentAndOutgoingsValue().replace("$", "").replace(",", "")) / totalIncome)).append("%").append("\t");
 			//6CPA Income
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(cpaIncome)).append("\t");
-			//Latern Pay Income
+			//Lantern Pay Income
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(lanternPayIncome)).append("\t");
 			//Pharma Programs
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format(pharmaProgramsIncome)).append("\t");
@@ -582,34 +388,12 @@ public class MonthlySummaryController extends DateSelectController{
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format((totalIncome+medicareIncome+cpaIncome+lanternPayIncome+pharmaProgramsIncome+otherIncome-totalCOGS)+(endStockOnHand-initialStockOnHand))).append("\t");
 			//Profit (as per Xero)
 			outString.append(NumberFormat.getCurrencyInstance(Locale.US).format((totalIncome+medicareIncome+cpaIncome+lanternPayIncome+pharmaProgramsIncome+otherIncome-totalCOGS)+(endStockOnHand-initialStockOnHand)-totalExpenses)).append("\r\n");
-
 			ClipboardContent content = new ClipboardContent();
 			content.putString(outString.toString());
 			Clipboard.getSystemClipboard().setContent(content);
-			JOptionPane.showMessageDialog(null, "Data copied to clipboard!");
-
+			dialogPane.showInformation("Data Exported","Data copied to clipboard!");
 		} catch (SQLException e) {
-		throw new RuntimeException(e);
+			dialogPane.showError("Failed to export data", e);
 		}
-	}
-
-	public AccountPaymentContactDataPoint getContactfromName(String name){
-		String sql;
-		try {
-			sql = "SELECT * FROM accountPaymentContacts  WHERE contactName = ? AND storeID = ?";
-			preparedStatement = con.prepareStatement(sql);
-			preparedStatement.setString(1,name);
-			preparedStatement.setInt(2, main.getCurrentStore().getStoreID());
-			resultSet = preparedStatement.executeQuery();
-			while (resultSet.next()) {
-				return new AccountPaymentContactDataPoint(resultSet);
-			}
-		} catch (SQLException throwables) {
-			throwables.printStackTrace();
-		}
-		return null;
 	}
 }
-
-
-
